<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoteApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_alex">Hello Alex!</string>
    <string name="file">File</string>
    <string name="options">Options</string>
    <string name="edit">Edit</string>
    <string name="media">Media</string>
    <string name="style">Style</string>
    <string name="newfile">New file</string>
    <string name="openfile">Open file</string>
    <string name="exit">Exit</string>
    <string name="title_activity_hot_corners">HotCornersActivity</string>
    <string name="title_activity_my_notes">MyNotesActivity</string>
    <string name="mynotes_label">My Notes</string>
    <string name="mycourses_label">My Courses</string>
    <string name="school_label">School</string>
    <string name="title_label">Title</string>
    <string name="course_label">Course</string>
    <string name="button_label">Hello, I am a Button</string>
    <string name="title_activity_cyril">CyrilActivity</string>
    <string name="allnotes_label">MyNotes</string>
    <string name="newnote_label">NewNote</string>
    <string name="search_label">Search</string>
    <string name="recent_label">LatestNote</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_label">Start</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="quiz_label">QUIZ</string>
    <string name="MyNotes">My Notes</string>
    <string name="search_hint">Note, Course...</string>
    <string name="title_activity_notes_overview">NotesOverviewActivity</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="note_label">Title</string>
    <string name="note_hint">Insert note name</string>
    <string name="course_hint">Unspecified</string>
    <string name="author_hint">Unknown</string>
    <string name="OK">OK</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="share">Share with others</string>
    <string name="title_activity_dictionary">DictionaryActivity</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="title_activity_add_dictionary">AddDictionaryActivity</string>

    <string name="task_label">Type your answer...</string>
    <string name="title_activity_quiz_result">QuizResultActivity</string>
    <string name="result_label">Result</string>
    <string name="courseId">id</string>


</resources>
