<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btnHotCorners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textView1"
        android:text="Alex's activity"
        android:onClick="StartHotCorners" />
    
    <Button
        android:id="@+id/btnMyNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textView1"
        android:text="Chiara's activity"
        android:onClick="StartMyNotes" />

</RelativeLayout> -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
        	  android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:background="@drawable/back"
              android:layout_gravity="center">
              
    	<Button
        	android:id="@+id/btnSearch"
        	android:layout_width="180dp"
        	android:layout_height="180dp"
        	android:text="@string/search_label"
        	android:onClick="Search"
        	android:background="@drawable/search" />
    	 
    	<Button
        	android:id="@+id/btnHotCorners"
            android:layout_width="180dp"
        	android:layout_height="180dp"
        	android:text="@string/newnote_label"
        	android:onClick="StartHotCorners"
        	android:background="@drawable/newnote" />
    			
    	<Button
        	android:id="@+id/btnMyNotes"
        	android:layout_width="180dp"
        	android:layout_height="180dp"
        	android:text="@string/allnotes_label"
        	android:onClick="StartMyNotes"
        	android:background="@drawable/mynotes" />
   
 		<Button
        	android:id="@+id/btnRecent"
        	android:layout_width="180dp"
        	android:layout_height="180dp"
        	android:text="@string/recent_label"
        	android:onClick="LatestNote"
        	android:background="@drawable/recent" />
 
</LinearLayout>