<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    		   android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical" >
<LinearLayout  android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical" >
    <TextView android:layout_weight="1"
              android:layout_width="match_parent"
              android:layout_height="60dp"
              android:text="@string/mynotes_label" 
              android:textSize="28sp"
              android:gravity="center"/>
</LinearLayout>

<!--
<RelativeLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent">
    	
	<com.touchmenotapps.widget.radialmenu.semicircularmenu.SemiCircularRadialMenu 
        android:id="@+id/NoteMenu"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:rotation="135"
        android:padding="5dp"/>
    
</RelativeLayout>  -->


<LinearLayout  android:layout_width="match_parent"
               android:layout_height="200dp"
               android:orientation="horizontal" >
    
 <LinearLayout android:layout_width="190dp" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:gravity="center" >
    <TextView android:id="@+id/author1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/author_label"
              android:textSize="22sp" />
    <TextView android:id="@+id/title1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_label"
              android:textSize="22sp" />
    <TextView android:id="@+id/course1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/course_label"
              android:textSize="22sp" />
    <Button android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/sample_0"
            android:onClick="circmenu" />
</LinearLayout>

<LinearLayout android:layout_width="190dp" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:gravity="center" >
    <TextView android:id="@+id/author2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/author_label"
              android:textSize="22sp" />
    <TextView android:id="@+id/title2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_label" 
             android:textSize="22sp" />
    <TextView android:id="@+id/course2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/course_label"
              android:textSize="22sp" />
    <Button android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/sample_0"
            android:onClick="circmenu" />
</LinearLayout>

<LinearLayout android:layout_width="190dp" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:gravity="center" >
    <TextView android:id="@+id/author3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/author_label"
              android:textSize="22sp" />
    <TextView android:id="@+id/title3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_label" 
              android:textSize="22sp" />
    <TextView android:id="@+id/course3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/course_label"
              android:textSize="22sp" />
    <Button android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/sample_0"
            android:onClick="circmenu" />
</LinearLayout>

<LinearLayout android:layout_width="190dp" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:gravity="center" >
    <TextView android:id="@+id/author4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/author_label"
              android:textSize="22sp" />
    <TextView android:id="@+id/title4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_label"
              android:textSize="22sp" />
    <TextView android:id="@+id/course4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/course_label"
              android:textSize="22sp" />
    <Button android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/sample_0"
            android:onClick="circmenu" />
</LinearLayout>

<LinearLayout android:layout_width="190dp" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:gravity="center" >
    <TextView android:id="@+id/author5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/author_label" 
              android:textSize="22sp" />
    <TextView android:id="@+id/title5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_label" 
              android:textSize="22sp" />
    <TextView android:id="@+id/course5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/course_label"
              android:textSize="22sp" />
    <Button android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/sample_0"
            android:onClick="circmenu" />
</LinearLayout>
</LinearLayout>

<View
 android:layout_width="match_parent"
 android:layout_height="2dp"
 android:background="@android:color/black" />

<LinearLayout  android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical" >
    <TextView android:layout_weight="1"
              android:layout_width="match_parent"
              android:layout_height="60dp"
              android:text="@string/mycourses_label" 
              android:textSize="28sp"
              android:gravity="center"/>
</LinearLayout>

<LinearLayout  android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal" >
    
 <LinearLayout android:layout_width="190dp" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:gravity="center" >
    <TextView android:id="@+id/author6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/author_label"
              android:textSize="22sp" />
    <TextView android:id="@+id/title6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_label" 
              android:textSize="22sp" />
    <Button android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/folder" 
            android:onClick="opencourse" />
</LinearLayout>

<LinearLayout android:layout_width="190dp" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:gravity="center" >
    <TextView android:id="@+id/author7"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/author_label" 
              android:textSize="22sp" />
    <TextView android:id="@+id/title7"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_label" 
              android:textSize="22sp" />
    <Button android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/folder" 
            android:onClick="opencourse" />
</LinearLayout>

<LinearLayout android:layout_width="190dp" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:gravity="center" >
    <TextView android:id="@+id/author8"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/author_label" 
              android:textSize="22sp" />
    <TextView android:id="@+id/title8"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_label" 
              android:textSize="22sp" />
    <Button android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/folder"
            android:onClick="opencourse" />
</LinearLayout>

<LinearLayout android:layout_width="190dp" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:gravity="center" >
    <TextView android:id="@+id/author9"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/author_label" 
              android:textSize="22sp" />
    <TextView android:id="@+id/title9"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_label" 
              android:textSize="22sp" />
    <Button android:id="@+id/button9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/folder"
            android:onClick="opencourse" />
</LinearLayout>

<LinearLayout android:layout_width="190dp" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:gravity="center" >
   <TextView android:id="@+id/author10"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/author_label" 
              android:textSize="22sp" />
    <TextView android:id="@+id/title10"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_label" 
              android:textSize="22sp" />
    <Button android:id="@+id/button10"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/folder"
            android:onClick="opencourse" />
</LinearLayout>
</LinearLayout>

</LinearLayout>